Include the author name

--- a/arc-impedance/arc_impedance.ipynb
+++ b/arc-impedance/arc_impedance.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# P&D UFSM-CPFL - Energia Incidente\n",
-    "Autor: Prof. Rafael Beltrame\n",
+    "Autor: Prof. Rafael Concatto Beltrame\n",
     "## Cálculo da Resitência Elétrica do Arco\n",
     "Neste *script* será calculado o valor da **resistência elétrica do arco** com base nas **formas de onda de tensão e corrente da simulação** na plataforma Ansys."
    ]
