--- a/arc-impedance/arc_impedance.ipynb
+++ b/arc-impedance/arc_impedance.ipynb
@@ -196,13 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "**Zarco,ab** = 0.08944 $\\Omega$"
+       "$$Zarco,ab = 0.08944 \\Omega$$"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -214,7 +214,7 @@
     {
      "data": {
       "text/markdown": [
-       "**Zarco,cb** = 0.09042 $\\Omega$"
+       "$$Zarco,cb = 0.09042 \\Omega$$"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -236,7 +236,7 @@
     "Varco_ab_rms = np.sqrt( sum(Varco_ab**2)/N )    # Tensão do arco (eficaz) (A)\n",
     "\n",
     "Zarco_ab = Varco_ab_rms/Iarco_ab_rms            # Impedância do arco (Ohm)\n",
-    "display(Markdown(f\"**Zarco,ab** = {Zarco_ab:.5f} $\\Omega$\"))\n",
+    "display(Markdown(f\"$$Zarco,ab = {Zarco_ab:.5f} \\Omega$$\"))\n",
     "\n",
     "#-------------------------------------#\n",
     "# Arco entre as barras \"c\" e \"b\"      #\n",
@@ -249,7 +249,7 @@
     "Varco_cb_rms = np.sqrt( sum(Varco_cb**2)/N )    # Tensão do arco (eficaz) (A)\n",
     "\n",
     "Zarco_cb = Varco_cb_rms/Iarco_cb_rms            # Impedância do arco (Ohm)\n",
-    "display(Markdown(f\"**Zarco,cb** = {Zarco_cb:.5f} $\\Omega$\"))"
+    "display(Markdown(f\"$$Zarco,cb = {Zarco_cb:.5f} \\Omega$$\"))"
    ]
   }
  ],
