--- a/arc-impedance/Caso_02/arc-impedance.ipynb
+++ b/arc-impedance/Caso_02/arc-impedance.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 208,
    "source": [
     "import numpy as np                       # Biblioteca numérica\r\n",
     "import matplotlib.pyplot as plt          # Biblioteca gráfica\r\n",
@@ -44,7 +44,8 @@
     "    <tr>\r\n",
     "<td>\r\n",
     "\r\n",
-    "![Circuito](circuit.jpeg)\r\n",
+    "<img src=\"circuit.jpeg\">\r\n",
+    "<!-- ![Circuito](circuit.jpeg) -->\r\n",
     "        \r\n",
     "</td>\r\n",
     "<td>\r\n",
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 209,
    "source": [
     "# ------------------------------------#\r\n",
     "# Correntes                           #\r\n",
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 210,
    "source": [
     "#-------------------------------------#\r\n",
     "# Arco entre as barras \"a\" e \"b\"      #\r\n",
@@ -221,7 +222,8 @@
     "    <tr>\r\n",
     "<td>\r\n",
     "    \r\n",
-    "![Calculo de Zcc](Icc.svg)\r\n",
+    "<img src=\"Icc.svg\">\r\n",
+    "<!-- ![Calculo de Zcc](Icc.svg) -->\r\n",
     "\r\n",
     "</td>\r\n",
     "<td>\r\n",
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 211,
    "source": [
     "Icc = 12.707e3\r\n",
     "Voc = 4.16e3\r\n",
@@ -275,7 +277,8 @@
     "    <tr>\r\n",
     "<td>\r\n",
     "\r\n",
-    "![Solução do circuito](malha.svg)\r\n",
+    "<img src=\"malha.svg\">\r\n",
+    "<!-- ![Solução do circuito](malha.svg) -->\r\n",
     "\r\n",
     "</td>\r\n",
     "<td>\r\n",
@@ -309,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 212,
    "source": [
     "# Definição do alpha para realizar as defasagens\r\n",
     "phi = 2*np.pi/3\r\n",
@@ -374,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 213,
    "source": [
     "f = 60\r\n",
     "T = 3/f\r\n",
