--- a/arc-impedance/Caso_02/arc-impedance.ipynb
+++ b/arc-impedance/Caso_02/arc-impedance.ipynb
@@ -44,7 +44,7 @@
     "    <tr>\r\n",
     "<td>\r\n",
     "\r\n",
-    "<img src=\"circuit.jpeg\">\r\n",
+    "<img src=\"circuit.jpeg\" style=\"width:50%;\">\r\n",
     "<!-- ![Circuito](circuit.jpeg) -->\r\n",
     "        \r\n",
     "</td>\r\n",
