--- a/arc-impedance/Caso_02/arc-impedance.ipynb
+++ b/arc-impedance/Caso_02/arc-impedance.ipynb
@@ -3,8 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# P&D UFSM-CPFL - Energia Incidente\n",
-    "## Cálculo da Resitência Elétrica do Arco\n",
+    "# P&D UFSM-CPFL - Energia Incidente\r\n",
+    "## Cálculo da Resitência Elétrica do Arco\r\n",
     "Neste *script* será calculado o valor da **resistência elétrica do arco** com base nas **formas de onda de tensão e corrente da simulação** na plataforma Ansys."
    ],
    "metadata": {}
@@ -44,7 +44,7 @@
     "    <tr>\r\n",
     "<td>\r\n",
     "\r\n",
-    "<img src=\"circuit.jpeg\" width=300\">\r\n",
+    "<img src=\"circuit.jpeg\" width=400 />\r\n",
     "<!-- ![Circuito](circuit.jpeg) -->\r\n",
     "        \r\n",
     "</td>\r\n",
@@ -222,7 +222,7 @@
     "    <tr>\r\n",
     "<td>\r\n",
     "    \r\n",
-    "<img src=\"Icc.svg\">\r\n",
+    "<img src=\"Icc.svg\" width=400 />\r\n",
     "<!-- ![Calculo de Zcc](Icc.svg) -->\r\n",
     "\r\n",
     "</td>\r\n",
@@ -277,7 +277,7 @@
     "    <tr>\r\n",
     "<td>\r\n",
     "\r\n",
-    "<img src=\"malha.svg\">\r\n",
+    "<img src=\"malha.svg\" width=400 />\r\n",
     "<!-- ![Solução do circuito](malha.svg) -->\r\n",
     "\r\n",
     "</td>\r\n",
