--- a/arc-impedance/Caso_02/arc-impedance.ipynb
+++ b/arc-impedance/Caso_02/arc-impedance.ipynb
@@ -222,7 +222,7 @@
     "    <tr>\r\n",
     "<td>\r\n",
     "    \r\n",
-    "<img src=\"Icc.svg\" width=400 />\r\n",
+    "<img src=\"icc.svg\" width=400 />\r\n",
     "<!-- ![Calculo de Zcc](Icc.svg) -->\r\n",
     "\r\n",
     "</td>\r\n",
