Correction in mesh equation

--- a/arc-impedance/Caso_02/arc-impedance.ipynb
+++ b/arc-impedance/Caso_02/arc-impedance.ipynb
@@ -284,8 +284,8 @@
     "<td>\r\n",
     "\r\n",
     "$$\\left[ {\\begin{array}{c}\r\n",
-    "  2Z_{cc} + Z_a &  -Z_{cc} \\\\ \r\n",
-    "  -Z_{cc}       &  2Z_{cc} + Z_a\r\n",
+    "  2Z_{cc} + Z_{arco,ab} &  -Z_{cc} \\\\ \r\n",
+    "  -Z_{cc}       &  2Z_{cc} + Z_{arco,cb}\r\n",
     "\\end{array}} \\right] \\cdot \\left[ {\\begin{array}{c}\r\n",
     "  {{I_1}} \\\\ \r\n",
     "  {{I_2}} \r\n",
