--- a/arc-impedance/Caso_02/arc-impedance.ipynb
+++ b/arc-impedance/Caso_02/arc-impedance.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 281,
    "source": [
     "import numpy as np                       # Biblioteca numérica\r\n",
     "import matplotlib.pyplot as plt          # Biblioteca gráfica\r\n",
@@ -76,27 +76,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 282,
    "source": [
-    "# ------------------------------------#\r\n",
-    "# Correntes                           #\r\n",
-    "#-------------------------------------#\r\n",
-    "\r\n",
     "# Área da seção transversal do condutor\r\n",
     "area = np.pi*(19.05e-3/2)**2                             \r\n",
     "\r\n",
     "# Espefique o intervalo\r\n",
     "inicio, fim = 300, 500\r\n",
     "\r\n",
+    "# ----------------------------------------------------------------------------------------------------------------------------------#\r\n",
+    "# Leitura das Corrente                                                                                                              #\r\n",
+    "#-----------------------------------------------------------------------------------------------------------------------------------#\r\n",
     "# Lê o arquivo current_in.csv como um DataFrame\r\n",
     "df_corrente = pd.read_csv('current_in.csv', delimiter=\";\")  \r\n",
-    "df_corrente = df_corrente[inicio:fim].copy()\r\n",
-    "flow_time = df_corrente['flow-time']\r\n",
+    "\r\n",
+    "df_corrente = df_corrente[inicio:fim].copy()               # Faz uma cópia do DataFrame filtrando os dados no intervalo especificado\r\n",
+    "flow_time = df_corrente['flow-time']                       # Obtém o flow-time \r\n",
     "time_step_i = df_corrente['Time-Step']                     # Obtém o time-step\r\n",
     "Ia = df_corrente['current_in_a'] * area                    # Corrente do eletrodo \"a\" (A) = Jmag (A/m²) * Area (m²)\r\n",
     "Ib = df_corrente['current_in_b'] * area                    # Corrente do eletrodo \"a\" (A) = Jmag (A/m²) * Area (m²)\r\n",
     "Ic = df_corrente['current_in_c'] * area                    # Corrente do eletrodo \"a\" (A) = Jmag (A/m²) * Area (m²)\r\n",
     "\r\n",
+    "# Salva para comparar no final\r\n",
     "Ia1 = Ia\r\n",
     "Ib1 = Ib\r\n",
     "Ic1 = Ic\r\n",
@@ -112,12 +113,17 @@
     "plt.tight_layout()\r\n",
     "plt.show()\r\n",
     "\r\n",
+    "# ----------------------------------------------------------------------------------------------------------------------------------#\r\n",
+    "# Leitura das Tensões                                                                                                               #\r\n",
+    "#-----------------------------------------------------------------------------------------------------------------------------------#\r\n",
     "# Lê o arquivo tensao.csv como um DataFrame\r\n",
     "df_tensao = pd.read_csv('tensao.csv', delimiter=\";\") \r\n",
-    "time_step_v = df_tensao['Time-Step']                                   # Obtém o time-step\r\n",
-    "Va = df_tensao['tensao-a'][inicio:fim]                                 # Tensão do eletrodo \"a\" (V)\r\n",
-    "Vb = df_tensao['tensao-b'][inicio:fim]                                 # Tensão do eletrodo \"b\" (V)\r\n",
-    "Vc = df_tensao['tensao-c'][inicio:fim]                                 # Tensão do eletrodo \"c\" (V)\r\n",
+    "\r\n",
+    "df_tensao = df_tensao[inicio:fim].copy()                    # Faz uma cópia do DataFrame filtrando os dados no intervalo especificado\r\n",
+    "time_step_v = df_tensao['Time-Step']                        # Obtém o time-step\r\n",
+    "Va = df_tensao['tensao-a']                                  # Tensão do eletrodo \"a\" (V)\r\n",
+    "Vb = df_tensao['tensao-b']                                  # Tensão do eletrodo \"b\" (V)\r\n",
+    "Vc = df_tensao['tensao-c']                                  # Tensão do eletrodo \"c\" (V)\r\n",
     "\r\n",
     "# Visualização\r\n",
     "plt.plot(Va, label=\"Va\")\r\n",
@@ -167,11 +173,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 283,
    "source": [
-    "#-------------------------------------#\r\n",
-    "# Arco entre as barras \"a\" e \"b\"      #\r\n",
-    "#-------------------------------------#\r\n",
+    "#------------------------------------------------------------------------------------#\r\n",
+    "# Arco entre as barras \"a\" e \"b\"                                                     #\r\n",
+    "#------------------------------------------------------------------------------------#\r\n",
     "Iarco_ab = np.array(Ia)                         # Corrente do arco (instantânea) (A)\r\n",
     "Varco_ab = np.array(Va)-np.array(Vb)            # Tensão do arco (instantânea) (V)\r\n",
     "\r\n",
@@ -183,9 +189,9 @@
     "Zarco_ab = Varco_ab_rms/Iarco_ab_rms            # Impedância do arco (Ohm)\r\n",
     "print(\"Zarco,ab = {:.5}\".format(Zarco_ab))\r\n",
     "\r\n",
-    "#-------------------------------------#\r\n",
-    "# Arco entre as barras \"c\" e \"b\"      #\r\n",
-    "#-------------------------------------#\r\n",
+    "#------------------------------------------------------------------------------------#\r\n",
+    "# Arco entre as barras \"c\" e \"b\"                                                     #\r\n",
+    "#------------------------------------------------------------------------------------#\r\n",
     "Iarco_cb = np.array(Ic)                         # Corrente do arco (instantânea) (A)\r\n",
     "Varco_cb = np.array(Vc)-np.array(Vb)            # Tensão do arco (instantânea) (V)\r\n",
     "\r\n",
@@ -241,12 +247,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 284,
    "source": [
-    "Icc = 12.707e3\r\n",
-    "Voc = 4.16e3\r\n",
+    "Icc = 12.707e3                            # Corrente de Curto-Circuito Trifásica (A)\r\n",
+    "Voc = 4.16e3                              # Tensão de Circuito-Aberto Trifásica (V)\r\n",
     "\r\n",
-    "Zcc = Voc/np.sqrt(3)/Icc\r\n",
+    "Zcc = Voc/np.sqrt(3)/Icc                  # Impedância de Circuito-Aberto Trifásica (Ohm)\r\n",
     "\r\n",
     "print(\"Zcc = {:.5}\".format(Zcc))\r\n",
     "# Iarco = Voc/(Zcc + Zarco_ab) \r\n",
@@ -312,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 285,
    "source": [
     "# Definição do alpha para realizar as defasagens\r\n",
     "phi = 2*np.pi/3\r\n",
@@ -347,9 +353,9 @@
     "Ic = -correntes[1]\r\n",
     "\r\n",
     "print(\"\\nCorrentes de fase\")\r\n",
-    "print(f\"Ia = {Ia:.4f}     \\t  {np.abs(Ia):.4f} |_ {np.angle(Ia, True):.2f}°\") \r\n",
-    "print(f\"Ib = {Ib:.4f}     \\t  {np.abs(Ib):.4f} |_ {np.angle(Ib, True):.2f}°\")\r\n",
-    "print(f\"Ic = {Ic:.4f}     \\t  {np.abs(Ic):.4f} |_ {np.angle(Ic, True):.2f}°\")"
+    "print(f\"Ia = {Ia:.6f}     \\t  {np.abs(Ia):.6f} |_ {np.angle(Ia, True):.2f}° \\t| {np.angle(Ia, False):.6f} rad\") \r\n",
+    "print(f\"Ib = {Ib:.6f}     \\t  {np.abs(Ib):.6f} |_ {np.angle(Ib, True):.2f}° \\t| {np.angle(Ib, False):.6f} rad\")\r\n",
+    "print(f\"Ic = {Ic:.6f}     \\t  {np.abs(Ic):.6f} |_ {np.angle(Ic, True):.2f}° \\t| {np.angle(Ic, False):.6f} rad\")"
    ],
    "outputs": [
     {
@@ -367,9 +373,9 @@
       "I2 = 1852.3286-6085.2963j     \t  6360.9710 |_ -73.07°\n",
       "\n",
       "Correntes de fase\n",
-      "Ia = 6251.8191+1470.6046j     \t  6422.4544 |_ 13.24°\n",
-      "Ib = -4399.4905-7555.9009j     \t  8743.4064 |_ -120.21°\n",
-      "Ic = -1852.3286+6085.2963j     \t  6360.9710 |_ 106.93°\n"
+      "Ia = 6251.819104+1470.604596j     \t  6422.454358 |_ 13.24° \t| 0.231028 rad\n",
+      "Ib = -4399.490491-7555.900893j     \t  8743.406366 |_ -120.21° \t| -2.098069 rad\n",
+      "Ic = -1852.328612+6085.296296j     \t  6360.971019 |_ 106.93° \t| 1.866280 rad\n"
      ]
     }
    ],
@@ -377,29 +383,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 286,
    "source": [
-    "f = 60\r\n",
-    "T = 3/f\r\n",
-    "w = 2*np.pi*f\r\n",
-    "passo = 8.333e-5\r\n",
-    "t = np.arange(passo, T, passo)[inicio:fim]\r\n",
+    "# Comparano os resultados\r\n",
+    "\r\n",
+    "f = 60                                              # Frequência (Hz)\r\n",
+    "T = 6/f                                             # Períodos (s)\r\n",
+    "w = 2*np.pi*f                                       # Frequência angular (rad/s)\r\n",
+    "passo = 8.333e-5                                    # Passo de tempo (s)\r\n",
+    "t = np.arange(passo, T, passo)[inicio:fim]          # Vetor de tempo (s)\r\n",
     "# t = flow_time\r\n",
     "\r\n",
-    "Ia_onda = np.abs(Ia)*np.cos(w*t + np.angle(Ia))\r\n",
-    "Ib_onda = np.abs(Ib)*np.cos(w*t + np.angle(Ib))\r\n",
-    "Ic_onda = np.abs(Ic)*np.cos(w*t + np.angle(Ic))\r\n",
+    "Ia_onda = np.abs(Ia)*np.cos(w*t + np.angle(Ia))     # Corrente de fase A (A)\r\n",
+    "Ib_onda = np.abs(Ib)*np.cos(w*t + np.angle(Ib))     # Corrente de fase B (A)\r\n",
+    "Ic_onda = np.abs(Ic)*np.cos(w*t + np.angle(Ic))     # Corrente de fase C (A)\r\n",
     "\r\n",
+    "# Visualização\r\n",
     "fig, ax = plt.subplots(1, 3, figsize=(15, 4))\r\n",
     "\r\n",
     "ax[0].set_title(\"Fase A\")\r\n",
     "ax[1].set_title(\"Fase B\")\r\n",
     "ax[2].set_title(\"Fase C\")\r\n",
     "\r\n",
+    "# Resultados obtidos na simulação\r\n",
     "ax[0].plot(t, Ia1, label=\"$Ia_{sim}$\", linestyle=\"--\", color='red')\r\n",
     "ax[1].plot(t, Ib1, label=\"$Ib_{sim}$\", linestyle=\"--\", color='blue')\r\n",
     "ax[2].plot(t, Ic1, label=\"$Ic_{sim}$\", linestyle=\"--\", color='green')\r\n",
     "\r\n",
+    "# Resultados calculados incluindo as impedâncias do arco e de curto-circuito\r\n",
     "ax[0].plot(t, abs(Ia_onda), label=\"Ia\", color='red')\r\n",
     "ax[1].plot(t, abs(Ib_onda), label=\"Ib\", color='blue')\r\n",
     "ax[2].plot(t, abs(Ic_onda), label=\"Ic\", color='green')\r\n",
