--- a/arc-impedance/Caso_02/arc-impedance.ipynb
+++ b/arc-impedance/Caso_02/arc-impedance.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 312,
    "source": [
     "import numpy as np                       # Biblioteca numérica\r\n",
     "import matplotlib.pyplot as plt          # Biblioteca gráfica\r\n",
@@ -44,7 +44,7 @@
     "    <tr>\r\n",
     "<td>\r\n",
     "\r\n",
-    "<img src=\"circuit.jpeg\" width=400 />\r\n",
+    "<img src=\"img/circuit.jpeg\" width=400 />\r\n",
     "<!-- ![Circuito](circuit.jpeg) -->\r\n",
     "        \r\n",
     "</td>\r\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 313,
    "source": [
     "# Área da seção transversal do condutor\r\n",
     "area = np.pi*(19.05e-3/2)**2                             \r\n",
@@ -88,7 +88,7 @@
     "# Leitura das Corrente                                                                                                              #\r\n",
     "#-----------------------------------------------------------------------------------------------------------------------------------#\r\n",
     "# Lê o arquivo current_in.csv como um DataFrame\r\n",
-    "df_corrente = pd.read_csv('current_in.csv', delimiter=\";\")  \r\n",
+    "df_corrente = pd.read_csv('data/current_in.csv', delimiter=\";\")  \r\n",
     "\r\n",
     "df_corrente = df_corrente[inicio:fim].copy()               # Faz uma cópia do DataFrame filtrando os dados no intervalo especificado\r\n",
     "flow_time = df_corrente['flow-time']                       # Obtém o flow-time \r\n",
@@ -117,7 +117,7 @@
     "# Leitura das Tensões                                                                                                               #\r\n",
     "#-----------------------------------------------------------------------------------------------------------------------------------#\r\n",
     "# Lê o arquivo tensao.csv como um DataFrame\r\n",
-    "df_tensao = pd.read_csv('tensao.csv', delimiter=\";\") \r\n",
+    "df_tensao = pd.read_csv('data/tensao.csv', delimiter=\";\") \r\n",
     "\r\n",
     "df_tensao = df_tensao[inicio:fim].copy()                    # Faz uma cópia do DataFrame filtrando os dados no intervalo especificado\r\n",
     "time_step_v = df_tensao['Time-Step']                        # Obtém o time-step\r\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 314,
    "source": [
     "#------------------------------------------------------------------------------------#\r\n",
     "# Arco entre as barras \"a\" e \"b\"                                                     #\r\n",
@@ -228,7 +228,7 @@
     "    <tr>\r\n",
     "<td>\r\n",
     "    \r\n",
-    "<img src=\"icc.svg\" width=400 />\r\n",
+    "<img src=\"img/icc.svg\" width=400 />\r\n",
     "<!-- ![Calculo de Zcc](Icc.svg) -->\r\n",
     "\r\n",
     "</td>\r\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 315,
    "source": [
     "Icc = 12.707e3                            # Corrente de Curto-Circuito Trifásica (A)\r\n",
     "Voc = 4.16e3                              # Tensão de Circuito-Aberto Trifásica (V)\r\n",
@@ -283,7 +283,7 @@
     "    <tr>\r\n",
     "<td>\r\n",
     "\r\n",
-    "<img src=\"malha.svg\" width=400 />\r\n",
+    "<img src=\"img/malha.svg\" width=400 />\r\n",
     "<!-- ![Solução do circuito](malha.svg) -->\r\n",
     "\r\n",
     "</td>\r\n",
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 316,
    "source": [
     "# Definição do alpha para realizar as defasagens\r\n",
     "phi = 2*np.pi/3\r\n",
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 317,
    "source": [
     "# Comparano os resultados\r\n",
     "\r\n",
